# MatrixGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: win-build.yml
MatrixGame/: CMakeLists.txt
MatrixGame/src/: MatrixDebugInfo.cpp  MatrixFormGame.cpp  MatrixGame.cpp  MatrixGame.h  MatrixGameDll.cpp  MatrixGameDll.hpp  MatrixGameDllEx.cpp  MatrixGameDllEx.hpp  MatrixMap.cpp  MatrixMapStatic.cpp  MatrixMultiSelection.cpp  MatrixObjectRobot.cpp  MatrixRobot.cpp  MatrixSoundManager.cpp  stdafx.h
MatrixLauncher/: CMakeLists.txt
MatrixLauncher/resources/: MatrixGame.rc  resource.h
MatrixLauncher/src/: CApplication.h  CSettings.cpp  CSettings.h  CWindowsApplication.cpp  CWindowsApplication.h  CWindowsBaseDialogTemplate.h  CWindowsBaseWindowTemplate.h  CWindowsGameWindow.cpp  CWindowsGameWindow.h  CWindowsLauncherUI.cpp  CWindowsLauncherUI.h  Settings.cpp  Settings.h  WindowsApplication.cpp  WindowsApplication.h  WindowsBaseDialogTemplate.h  WindowsLauncherUI.cpp  WindowsLauncherUI.h  WindowsMain.cpp  WindowsSettingsUI.h  WinodwsSettingsUI.cpp
MatrixLib/3G/: 3g.cpp
MatrixLib/Base/: Pack.cpp  Pack.hpp  fps_counter.hpp  perf_counter.hpp  stupid_logger.hpp
